apps/base/zgrzyt-ai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zgrzyt-podcasts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zgrzyt-podcasts
  template:
    metadata:
      labels:
        app: zgrzyt-podcasts
    spec:
      containers:
        - name: zgrzyt
          image: ghcr.io/mikolajbielinski/zgrzyt:v1.0
      imagePullSecrets:
        - name: ghcr-secret
