apps/base/zgrzyt-ai/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zgrzyt-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zgrzyt-backend
  template:
    metadata:
      labels:
        app: zgrzyt-backend
    spec:
      containers:
        - name: zgrzyt-backend
          image: ghcr.io/mikolajbielinski/zgrzyt-backend:main@sha256:1429a63123e9b83851c90c1d74d6d839198a2d6f5156b5f29822811f1849c678
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: zgrzyt-backend
spec:
  selector:
    app: zgrzyt-backend
  ports:
    - port: 8000
      targetPort: 8000
