apps/base/zgrzyt-ai/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zgrzyt-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zgrzyt-frontend
  template:
    metadata:
      labels:
        app: zgrzyt-frontend
    spec:
      containers:
        - name: zgrzyt-frontend
          image: ghcr.io/mikolajbielinski/zgrzyt-frontend:main@sha256:300461bb2645258aee1b0314d1581074a3dfea70911fc2e54634db833fffc778
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: zgrzyt-frontend
spec:
  selector:
    app: zgrzyt-frontend
  ports:
    - port: 80
      targetPort: 80
