apps/base/zgrzyt-ai/speakers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zgrzyt-speakers
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zgrzyt-speakers
  template:
    metadata:
      labels:
        app: zgrzyt-speakers
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: zgrzyt-speakers
          image: ghcr.io/mikolajbielinski/zgrzyt-speakers:main@sha256:38c3ed0c091c46d50321a688441a30130d1f4251e3d83bd9ef5d3450667f4392
          ports:
            - containerPort: 3000
          livenessProbe:
            tcpSocket:
              port: 3000
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 3
          readinessProbe:
            tcpSocket:
              port: 3000
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 3
          startupProbe:
            tcpSocket:
              port: 3000
            failureThreshold: 18
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 10m
              memory: 96Mi
            limits:
              memory: 192Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: zgrzyt-speakers
spec:
  selector:
    app: zgrzyt-speakers
  ports:
    - port: 5200
      targetPort: 3000
